en masse animationer og modal vindue

--- a/index.html
+++ b/index.html
@@ -6,14 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Plastik i havet</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="thesvg" class="scroller">
-      <div id="sections">
+      <div id="modal">
+        <button id="krydsknap">&times;</button>
+
+        <p>150 millioner tons plastik i havet, svarer til 833 blåhvaler</p>
+        <div class="hval"></div>
+      </div>
+
+      <div id="modal3">
+        <button id="krydsknap">&times;</button>
+        <p>158 millioner tons plastik i havet, svarer til 878 blåhvaler</p>
+        <div class="hval3"></div>
+      </div>
+
+      <div id="modal4">
+        <button id="krydsknap">&times;</button>
+        <p>166 millioner tons plastik i havet, svarer til 922 blåhvaler</p>
+        <div class="hval4"></div>
+      </div>
+
+      <i onclick="scrollWin()" class="fas">&#xf063;</i>
+
+      <div id="modal5">
+        <button id="krydsknap">&times;</button>
+        <p>174 millioner tons plastik i havet, svarer til 967 blåhvaler</p>
+        <div class="hval5"></div>
+      </div>
+
+      <i id="pil" onclick="scrollWin()" class="fas">&#xf063;</i>
+
+      <!--       <div id="sections">
         <section id="snap1"></section>
         <section id="snap2"></section>
         <section id="snap3"></section>
       </div>
+    </div> -->
     </div>
 
     <script src="js.js"></script>
