t modal og infoboks, smooth scroll, hover, animationer

--- a/index.html
+++ b/index.html
@@ -12,9 +12,27 @@
       integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="thesvg" class="scroller">
+      <div id="modal_info">
+        <button id="krydsknap">&times;</button>
+
+        <p class="pp">
+          Det vides ikke præcist hvor meget plastik der er i verdenshavene på
+          nuværende tidspunkt. Men man regner med at der er 150 millioner ton
+          plastik.
+        </p>
+        <p class="p">
+          Der skal gøres en indsats nu, for at redde dyrelivet i havet. I år
+          2050 vil der være mere plastik i havet end der er fisk.
+        </p>
+      </div>
+
       <div id="modal">
         <button id="krydsknap">&times;</button>
 
@@ -42,8 +60,43 @@
         <div class="hval5"></div>
       </div>
 
+      <div id="modal6">
+        <button id="krydsknap">&times;</button>
+        <p>182 millioner tons plastik i havet, svarer til 1011 blåhvaler</p>
+        <div class="hval6"></div>
+      </div>
+
+      <div id="modal7">
+        <button id="krydsknap">&times;</button>
+        <p>190 millioner tons plastik i havet, svarer til 1056 blåhvaler</p>
+        <div class="hval7"></div>
+      </div>
+
+      <div id="modal8">
+        <button id="krydsknap">&times;</button>
+        <p>198 millioner tons plastik i havet, svarer til 1100 blåhvaler</p>
+        <div class="hval8"></div>
+      </div>
+
       <i id="pil" onclick="scrollWin()" class="fas">&#xf063;</i>
 
+      <div id="modal9">
+        <button id="krydsknap">&times;</button>
+        <p>206 millioner tons plastik i havet, svarer til 1144 blåhvaler</p>
+        <div class="hval9"></div>
+      </div>
+
+      <div id="modal10">
+        <button id="krydsknap">&times;</button>
+        <p>214 millioner tons plastik i havet, svarer til 1189 blåhvaler</p>
+        <div class="hval10"></div>
+      </div>
+
+      <div id="modal11">
+        <button id="krydsknap">&times;</button>
+        <p>222 millioner tons plastik i havet, svarer til 1233 blåhvaler</p>
+        <div class="hval11"></div>
+      </div>
       <!--       <div id="sections">
         <section id="snap1"></section>
         <section id="snap2"></section>
