animationer og scroll effekt

--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
         <p>222 millioner tons plastik i havet, svarer til 1233 blåhvaler</p>
         <div class="hval11"></div>
       </div>
-      <!--       <div id="sections">
+      <div id="sections">
         <section id="snap1"></section>
         <section id="snap2"></section>
         <section id="snap3"></section>
       </div>
-    </div> -->
     </div>
 
     <script src="js.js"></script>
