--- a/index.html
+++ b/index.html
@@ -36,19 +36,26 @@
       <div id="modal">
         <button id="krydsknap">&times;</button>
 
-        <p>150 millioner tons plastik i havet, svarer til 833 blåhvaler</p>
+        <p>
+          150 millioner tons plastik i havet, svarer til <b>833 blåhvaler</b>
+        </p>
         <div class="hval"></div>
       </div>
 
       <div id="modal3">
         <button id="krydsknap">&times;</button>
-        <p>158 millioner tons plastik i havet, svarer til 878 blåhvaler</p>
+        <p>
+          158 millioner tons plastik i havet, svarer til
+          <b>878 blåhvaler</b>
+        </p>
         <div class="hval3"></div>
       </div>
 
       <div id="modal4">
         <button id="krydsknap">&times;</button>
-        <p>166 millioner tons plastik i havet, svarer til 922 blåhvaler</p>
+        <p>
+          166 millioner tons plastik i havet, svarer til <b>922 blåhvaler</b>
+        </p>
         <div class="hval4"></div>
       </div>
 
@@ -56,25 +63,33 @@
 
       <div id="modal5">
         <button id="krydsknap">&times;</button>
-        <p>174 millioner tons plastik i havet, svarer til 967 blåhvaler</p>
+        <p>
+          174 millioner tons plastik i havet, svarer til <b>967 blåhvaler</b>
+        </p>
         <div class="hval5"></div>
       </div>
 
       <div id="modal6">
         <button id="krydsknap">&times;</button>
-        <p>182 millioner tons plastik i havet, svarer til 1011 blåhvaler</p>
+        <p>
+          182 millioner tons plastik i havet, svarer til <b>1011 blåhvaler</b>
+        </p>
         <div class="hval6"></div>
       </div>
 
       <div id="modal7">
         <button id="krydsknap">&times;</button>
-        <p>190 millioner tons plastik i havet, svarer til 1056 blåhvaler</p>
+        <p>
+          190 millioner tons plastik i havet, svarer til <b>1056 blåhvaler</b>
+        </p>
         <div class="hval7"></div>
       </div>
 
       <div id="modal8">
         <button id="krydsknap">&times;</button>
-        <p>198 millioner tons plastik i havet, svarer til 1100 blåhvaler</p>
+        <p>
+          198 millioner tons plastik i havet, svarer til <b>1100 blåhvaler</b>
+        </p>
         <div class="hval8"></div>
       </div>
 
@@ -82,19 +97,25 @@
 
       <div id="modal9">
         <button id="krydsknap">&times;</button>
-        <p>206 millioner tons plastik i havet, svarer til 1144 blåhvaler</p>
+        <p>
+          206 millioner tons plastik i havet, svarer til <b>1144 blåhvaler</b>
+        </p>
         <div class="hval9"></div>
       </div>
 
       <div id="modal10">
         <button id="krydsknap">&times;</button>
-        <p>214 millioner tons plastik i havet, svarer til 1189 blåhvaler</p>
+        <p>
+          214 millioner tons plastik i havet, svarer til <b>1189 blåhvaler</b>
+        </p>
         <div class="hval10"></div>
       </div>
 
       <div id="modal11">
         <button id="krydsknap">&times;</button>
-        <p>222 millioner tons plastik i havet, svarer til 1233 blåhvaler</p>
+        <p>
+          222 millioner tons plastik i havet, svarer til <b>1233 blåhvaler</b>
+        </p>
         <div class="hval11"></div>
       </div>
       <div id="sections">
